@@ -22,13 +22,10 @@ public class BasketService {
 
     private final BasketDao basketDao;
 
-    private final BasketGameDtoConverter basketGameDtoConverter;
-    private final GameService gameService;
 
-    public BasketService(BasketDao basketDao, BasketGameDtoConverter basketGameDtoConverter, GameService gameService) {
+
+    public BasketService(BasketDao basketDao ) {
         this.basketDao = basketDao;
-        this.basketGameDtoConverter = basketGameDtoConverter;
-        this.gameService = gameService;
     }
 
     protected Basket create(){
@@ -39,43 +36,43 @@ public class BasketService {
     protected Basket getBasketByCustomerId(int customerId){
         return basketDao.findBasketByCustomer_CustomerId(customerId);
     }
-    public void deleteGameFromBasket(DeleteGameFromBasketRequest request ){
-        Game game = gameService.findById(request.getGameId());
-        Basket basket = getBasketByCustomerId(request.getCustomerId());
-        List<Game> collect = basket.getGames().stream()
-                .filter(game1 -> game1.equals(game)).toList();
+//    public void deleteGameFromBasket(DeleteGameFromBasketRequest request ){
+//        Game game = gameService.findById(request.getGameId());
+//        Basket basket = getBasketByCustomerId(request.getCustomerId());
+//        List<Game> collect = basket.getGames().stream()
+//                .filter(game1 -> game1.equals(game)).toList();
+//
+//        if(collect.get(0) == null){
+//            throw new GameIdDoesNotExistException(Constant.GAME_ID_DOES_NOT_EXIST);
+//        }
+//        else{
+//             basket.getGames().remove(game);
+//
+//        }
+//
+//
+//    }
 
-        if(collect.get(0) == null){
-            throw new GameIdDoesNotExistException(Constant.GAME_ID_DOES_NOT_EXIST);
-        }
-        else{
-             basket.getGames().remove(game);
-
-        }
-
-
-    }
-
-    public List<BasketGameDto> addGameToBasket(AddGameToBasketRequest request){
-
-        Basket basket = getBasketByCustomerId(request.getCustomerId());
-        Game game = gameService.findById(request.getGameId());
-        List<Game> collect = basket.getGames().stream()
-                .filter(game1 -> game1.equals(game)).toList();
-
-        if(collect.get(0) != null){
-            throw new GameAlreadyExistsInBasketException(Constant.GAME_ALREADY_EXISTS_IN_BASKET);
-        }
-        basket.getGames().add(game);
-        return basketGameDtoConverter.converter(basket.getGames());
-    }
-
-    public List<Buy> buyGameFromBasket(int customerId){
-        Customer customer = getBasketByCustomerId(customerId).getCustomer();
-
-        List<Game> games = customer.getBasket().getGames();
-
-        return  games.stream().map(game -> new Buy(customer, game, customer.getLibrary())).collect(Collectors.toList());
-
-    }
+//    public List<BasketGameDto> addGameToBasket(AddGameToBasketRequest request){
+//
+//        Basket basket = getBasketByCustomerId(request.getCustomerId());
+//        Game game = gameService.findById(request.getGameId());
+//        List<Game> collect = basket.getGames().stream()
+//                .filter(game1 -> game1.equals(game)).toList();
+//
+//        if(collect.get(0) != null){
+//            throw new GameAlreadyExistsInBasketException(Constant.GAME_ALREADY_EXISTS_IN_BASKET);
+//        }
+//        basket.getGames().add(game);
+//        return basketGameDtoConverter.converter(basket.getGames());
+//    }
+//
+//    public List<Buy> buyGameFromBasket(int customerId){
+//        Customer customer = getBasketByCustomerId(customerId).getCustomer();
+//
+//        List<Game> games = customer.getBasket().getGames();
+//
+//        return  games.stream().map(game -> new Buy(customer, game, customer.getLibrary())).collect(Collectors.toList());
+//
+//    }
 }
